WindGroup Dev/src/objects/Human_Traffic_Count__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Human Traffic Counts</relationshipLabel>
        <relationshipName>Human_Traffic_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <label>Total Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Human Traffic Count</label>
    <nameField>
        <label>Human Traffic Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Human Traffic Counts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>